# moveit_py_example

./: README.md  package.xml  setup.cfg  setup.py
launch/: motion_planning.launch.py  moveit_py.launch.py  moveit_py_notebook.launch.py  planning_scene_interface.launch.py  planning_scene_monitor.launch.py  pose_goal.launch.py  servo_client.launch.py
moveit_py_example/: motion_planning.py  planning_scene_interface.py  planning_scene_monitor.py  pose_goal.py
moveit_py_example/notebooks/: motion_planning.ipynb  planning_scene_monitor.ipynb  ps4_teloperation.ipynb
